--- a/microservicios/src/main/resources/application.properties
+++ b/microservicios/src/main/resources/application.properties
@@ -3,13 +3,24 @@
 spring.application.name=microservicios
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_auth
-spring.datasource.username=root
-spring.datasource.password=
-
+# Configuración de base de datos H2 en memoria para desarrollo
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+# Configuración JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Configuración de Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+# Configuración de logging
+logging.level.com.aromatik=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+
 
 
