--- a/microservicios/src/main/resources/application.properties
+++ b/microservicios/src/main/resources/application.properties
@@ -21,6 +21,5 @@ springdoc.swagger-ui.operationsSorter=method
 logging.level.com.aromatik=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-
-
-
+# Activar el perfil de Dev para ejecutar el DATALOADER y cargar datos falsos a la db en memoria q creamos
+spring.profiles.active=dev
